samples/_failures_safe/1761198287_805f6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9851326.c: In function ‘main’:
./samples/SAFE/__tmp_d9851326.c:149:5: error: expected expression at end of input
  149 |     memset(decompressed, 0,
      |     ^~~~~~
./samples/SAFE/__tmp_d9851326.c:149:5: error: expected declaration or statement at end of input
